[package]
name = "neighborhood-diversity"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/ludwigschlame/neighborhood-diversity/"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
