[package]
name = "neighborhood-diversity"
version = "0.5.2"
edition = "2021"
repository = "https://github.com/ludwigschlame/neighborhood-diversity"
documentation = "https://docs.rs/neighborhood-diversity"
readme = "README.md"
description = "Crate for computing the neighborhood diversity of simple, undirected graphs."
keywords = ["graph", "graph-algorithms", "data-structure"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
